load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_proto_library", "cc_test")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")

cc_library(
    name = "common_lib",
    srcs = glob(["src/common/*.cc"]),
    hdrs = glob(["src/common/*.h"]),
    strip_include_prefix = "//src",
    visibility = ["//visibility:public"],
    deps = ["@com_github_spdlog//:spdlog"],
)

cc_library(
    name = "skiplist_map_lib",
    srcs = glob(["src/skiplist_map/*.cc"]),
    hdrs = glob(["src/skiplist_map/*.h"]),
    strip_include_prefix = "//src",
    visibility = ["//visibility:public"],
    deps = ["@com_github_skiplist//:skiplist"],
)

# RPC gRPC lib.
cc_grpc_library(
    name = "rpc_cc_grpc",
    srcs = ["//src/protobuf:rpc_proto"],
    grpc_only = True,
    deps = [
        "//src/protobuf:rpc_cc_proto",
    ],
)

cc_library(
    name = "metable_server_lib",
    srcs = glob(["src/server/metable_server.cc"]),
    hdrs = glob(["src/server/*.h"]),
    strip_include_prefix = "//src",
    visibility = ["//visibility:public"],
    deps = [
        ":common_lib",
        ":rpc_cc_grpc",
        "@asio",
        "@com_github_grpc_grpc//:grpc++",
    ],
)

cc_library(
    name = "raftlite_common_lib",
    srcs = glob(["src/raftlite/common/*.cc"]),
    hdrs = glob(["src/raftlite/common/*.h"]),
    strip_include_prefix = "//src",
    visibility = ["//visibility:public"],
    deps = [
        ":common_lib",
        ":rpc_cc_grpc",
        "@asio",
        "@com_github_grpc_grpc//:grpc++",
    ],
)

cc_library(
    name = "metable_client_lib",
    srcs = glob(["src/client/metable_client.cc"]),
    hdrs = glob(["src/client/*.h"]),
    strip_include_prefix = "//src",
    visibility = ["//visibility:public"],
    deps = [
        ":common_lib",
        ":rpc_cc_grpc",
        "@com_github_grpc_grpc//:grpc++",
    ],
)

cc_library(
    name = "metable_sql_lib",
    srcs = glob(["src/sql/*.cc", "src/sql/*.cpp"]),
    hdrs = glob(["src/sql/*.h"]),
    strip_include_prefix = "//src",
    visibility = ["//visibility:public"],
    deps = [
        "//src/sql/anltr4:sql_grammar_parser",
    ],
)

cc_binary(
    name = "metable_server",
    srcs = glob([
        "src/server/server_main.cc",
    ]),
    deps = [
        ":common_lib",
        ":metable_server_lib",
        ":rpc_cc_grpc",
        "@com_github_grpc_grpc//:grpc++",
    ],
)

cc_binary(
    name = "metable_client",
    srcs = glob(["src/client/client_main.cc"]),
    deps = [
        ":common_lib",
        ":metable_client_lib",
        ":rpc_cc_grpc",
        "@com_github_grpc_grpc//:grpc++",
    ],
)

cc_test(
    name = "logging_test",
    size = "small",
    srcs = ["tests/logging_test.cc"],
    tags = ["team:metable-core"],
    deps = [
        ":common_lib",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "gflags_test",
    size = "small",
    srcs = ["tests/gflags_test.cc"],
    tags = ["team:metable-core"],
    deps = [
        "@com_github_gflags_gflags//:gflags",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "skiplist_map_test",
    size = "small",
    srcs = ["tests/skiplist_map_test.cc"],
    tags = ["team:metable-core"],
    deps = [
        ":skiplist_map_lib",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "rpc_test",
    size = "small",
    srcs = ["tests/rpc_test.cc"],
    tags = ["team:metable-core"],
    deps = [
        ":metable_client_lib",
        ":metable_server_lib",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "sql_test",
    size = "small",
    srcs = ["tests/sql_test.cc"],
    tags = ["team:metable-core"],
    deps = [
        ":metable_sql_lib",
        "@com_google_googletest//:gtest_main",
    ],
)
