[package]
name = "metable"
authors = ["Qing Wang <kingchin1218@gmail.com>"]
version = "0.1.0"
edition = "2018"
documentation = "docs.metable.io"
repository = "https://github.com/jovany-wang/metable.git"
description = """
xxx
"""

[[bin]]
name = "metaserver"
path = "src/server_main.rs"

[[bin]]
name = "metacli"
path = "src/cli_main.rs"

[dependencies]
tokio = {version = "1.12.0", features = ["full"]}
async-stream = "0.3.0"
atoi = "0.3.2"
bytes = "1"
structopt = "0.3.14"
tokio-stream = "0.1"
tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.2.2"

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1.12.0", features = ["test-util"] }

